Windows fix for personalization tab scrolling
Need to set explicit height for the scrolling carousel in order to keep
the horizontal scrollbar hidden.

--- a/server/webapp/WEB-INF/rails.new/app/assets/new_stylesheets/single_page_apps/pipeline_configs/_dashboard_view_tabs.scss
+++ b/server/webapp/WEB-INF/rails.new/app/assets/new_stylesheets/single_page_apps/pipeline_configs/_dashboard_view_tabs.scss
@@ -167,7 +167,8 @@ $dashboard-tabs-box-shadow: 0 0 10px rgba(0, 0, 0, 0.21);
 .dashboard-tabs-scrollable {
   padding:  0 $dashboard-tabs-pager-width;
   width:    calc(100% - #{$dashboard-add-tab-width} - #{$dashboard-tab-list-toggle-width});
-  overflow: hidden;
+  height:   $dashboard-tab-height;
+  overflow: hidden; // ensure scrollbars of inner container are hidden from view
 
   .page-prev, .page-next {
     position:     absolute;
